[package]
name = "expose-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "expose-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["stream", "native-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures-util = "0.3"
expose-common = { path = "../common" }
url = "2"
bytes = "1"
