[package]
name = "expose-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "expose_client"
path = "src/lib.rs"

[[bin]]
name = "expose-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
expose-common = { path = "../common" }
