[package]
name = "expose-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "expose-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.24" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures-util = "0.3"
expose-common = { path = "../common" }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
