[package]
name = "expose-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "expose-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
expose-common = { path = "../common" }
